# Pet-Research

./: .gitignore  README.md
ops/ubuntu/: README.md  bootstrap_shadowmeta.sh  deploy_shadowmeta.sh  paths.sh  refresh_shadowmeta.sh  shadowmeta.cron.example  shadowmeta.nginx.conf
research-site/: .gitignore  README.md
research-site/ops/ubuntu/: README.md  bootstrap_shadowmeta.sh  deploy_shadowmeta.sh  refresh_shadowmeta.sh
research-site/scraper/: pyproject.toml  refresh_reviews.py  refresh_videos.py  seed_pet_categories.py
research-site/scraper/analyze/: aov.py  review_insights.py  seasonality.py
research-site/scraper/bathroom_research_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research-site/scraper/pet_research_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research-site/scraper/sources/: __init__.py  _schema.py  _utils.py  dtc_reviews.py  youtube_api.py
research-site/web/: index.html  package-lock.json  vite.config.ts
research-site/web/src/: App.tsx  main.tsx
scraper/: .env.example  backfill_leadtime.py  run_all.py  verify_asins.py
scraper/analyze/: __init__.py  painpoints.py
scraper/sources/: amazon_rainforest.py  reddit_api.py  reddit_threads.py  trustpilot.py  youtube_videos.py
web/: package.json  tailwind.config.js
web/public/data/: dog-food.json  influencers.json  painpoints.json  seasonality.json
web/src/components/: CompetitorTable.tsx  InfluencerCard.tsx  Layout.tsx  PainPointHeatmap.tsx  PriceCard.tsx  ShippingMatrix.tsx  SourceBadge.tsx
web/src/i18n/: index.ts  zh.json
web/src/lib/: format.ts  (+1 more)
(+67 files in other folders)
